data/all_generated_tests/raw_wast_tests/br_table_IncorrectHandlingofControlFlowAcrossModuleBoundaries_2530.wast
;; 9. **Test Description:**    - Create a deep call hierarchy where an imported function with a `br_table` transitions to several levels of imported and exported functions. Check for conforming stack unwinding and correctness of control transfer.    - **Constraint:** Checks stack management in complex call hierarchies spanning multiple modules and branch levels.    - **Control Flow Boundary Check:** Verifies consistency and correctness of stack state across deeply nested function calls and returns.

(assert_invalid
  (module
    (import "env" "external_func" (func (result i32)))
    (func $deep_call
      (block $outer
        (block $mid
          (block $inner
            call $external_func
            (br_table 0 1 2 3 (i32.const 4))
          )
        )
      )
    )
  )
  "unknown label"
)